applications/rustypaste/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: rustypaste
  labels:
    name: rustypaste
